# paracule

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
libflipnote/: Cargo.toml
libflipnote/src/: lib.rs
libflipnote/src/ppm/: constants.rs  file.rs  mod.rs  thumbnail.rs
libflipnote/src/ppm/audio/: adpcm_decoder.rs  adpcm_encoder.rs  adpcm_ima.rs  audio.rs  audio_data.rs  audio_header.rs  mod.rs  wav_container.rs
libflipnote/src/ppm/frames/: animation_data.rs  animation_flags.rs  frame.rs  frame_header.rs  layer.rs  line.rs  mod.rs
libflipnote/src/ppm/parsers/: audio_parser.rs  mod.rs  ppm_parser.rs
libflipnote/src/ppm/writers/: audio_writer.rs  mod.rs
libflipnote/src/utils/: color_utils.rs  crypto.rs  image_utils.rs  mod.rs
