[package]
name = "libflipnote"
version = "0.1.0"
edition = "2021"

[dependencies]
#ez error handling
anyhow = "1.0.93"
#binary parsing library
binrw = "0.14.1"
#image processing library. takes microseconds to create an image vs milliseconds with other packages i've tried.
photon-rs = "0.3.2"
#signature validation & writing
rsa = "0.9.6"
sha1-checked = "0.10.0"
#wav file creation
hound = "3.5.1"
#pipes for ffmpeg
libc = "0.2.164"

[lib]
crate-type = ["cdylib", "rlib"]