[package]
name = "libflipnote"
version = "0.1.0"
edition = "2024"

[dependencies]
#ez error handling
anyhow = "1.0.93"
#binary parsing library
binrw = "0.15.0"
#image processing library.
image = "0.24.7" #version locked due to dithord
dithord = "0.4.1"
#signature validation & writing
rsa = "0.9.6"
sha1-checked = "0.10.0"
#wav file creation
hound = "3.5.1"
#pipes for ffmpeg
libc = "0.2.164"
#audio resampling and mixing.
fon = { git = "https://github.com/ardaku/fon", branch = "v1" }
audio-codec-algorithms = "0.7.0"
rubato = "0.16.2"

[lib]
crate-type = ["cdylib", "rlib"]